  using the '~b', '~c', '~h', and '~p' tilde escapes, but changing the values
  of the 'autocc' and 'autobcc' variables using '~:set' has no effect on the
  currently composed message anymore.
* The values of the 'from' and 'replyto' variables can now contain multiple
  addresses.
* A '~H' tilde escape was introduced. It allows to set message-specific values
  for the 'From', 'Reply-To', and 'Organization' header fields.
* The '-r' option now actually disables tilde escapes as documented (Bugreport
  by Bob Tennent).
* The 'move' command does not anymore mark messages as moved if writing to
  an IMAP folder fails.
* The 'undelete' command now also clears the 'saved' flags of messages that
  have been moved.
* Fixed a crash due to a null pointer dereference that occurred when both
  control and non-ASCII bytes but no NUL bytes were present in a message
  body and no content type was defined in a mime.types file.
* The ~F and ~M tilde escapes did not work for interpolating messages with
  binary attachments anymore since version 11.13 (Bugreport by Tivon Luker).
* The current message is now shown in the header summary even if it has been
  killed.
* The 'kill' command did not operate correctly on 64-bit big-endian machines.
* A notification is now printed when text is saved to dead.letter.

[11.22] released 3/20/05
* In threaded mode, the thread structure is now shown using line-drawing
  characters in the header summary. (This looks best on a UTF-8 terminal.)
* If a message contains both a 'References' and an 'In-Reply-To' header
  field, 'In-Reply-To' is now preferred for threading and the ',' address.
* When a message part of content-type text/anything is written with the
  pipe-type/subtype mechanism, it is now converted to the character encoding
  of the locale (as it was before 11.14 or so).
* When using a hostname with a port number attached with SMTP STARTTLS,
  strip the port number for correct host name verification (Bugreport by
  Gary E. Rafe).
